@@ -78,6 +78,7 @@
 	* Added tx_solr_Spellchecker->isIncorrectlySpelled()
 	* Refactored rendering of plugin commands
 	* Changed the results command to use the search's query
+	* Added tx_solr_pi_results_ResultsCommand->setSearch()
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
